"Updated HTML, CSS, and JS files in frontend directory, including changes to index.html, Home component, Navbar component, SignUp component, and global CSS styles."

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  height: 100vh;
 }
 
 code {
@@ -24,11 +26,11 @@ code {
 }
 
 .nav-link.active {
-  color: #ffe600 !important;
+  color: #fcc135 !important;
 }
 
-.nav-link.active:hover {
-  color: #ffe600; 
+.nav-link:hover {
+  color: #ffe60090 !important;
 }
 
 .navbar-toggler{
