Dashboard and Stats page completed

--- a/frontend/src/components/JournalItem/index.css
+++ b/frontend/src/components/JournalItem/index.css
@@ -1,5 +1,5 @@
 .journal-item{
-    background-color: azure;
+    background-color: rgb(221, 227, 227);
     margin-bottom: 1rem;
     padding: 12px;
     border-radius: 8px;
