--- a/frontend/src/components/SignUp/index.css
+++ b/frontend/src/components/SignUp/index.css
@@ -1,4 +1,11 @@
 /* Basic styling */
+
+.sign-up-bg-container{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   
 .form-container {
     width: 100%;
